# dw

./: .gitignore  INSTALL.txt  requirements.txt  setup.cfg  setup.py
bpc/: __init__.py  bpcgui.py
docs/: Makefile  conf.py  dep.rst  download.rst  dw.core.rst  dw.flag.rst  dw.gui.rst  dw.rst  features.rst  index.rst  install.rst  intro.rst  libdw.rst  license.rst  make.bat  modules.rst  screenshots.rst  structure.rst
dw/: __init__.py
dw/core/: __init__.py  commands.py  data_def.py  dw_logging.py  io.py  prefs.py
dw/flag/: __init__.py  algorithms.py  conf.py  pylibdw.py  rfi_dect_func.py  widget.py
dw/gui/: __init__.py  dw_gui.py  prefs.py  widgets.py
libdw/: Makefile.am  Makefile.in  README  configure  configure.ac
libdw/src/: Makefile.am  Makefile.in  lib.c  libdw-0.1.pc.in  libdw.h
recurrence/: __init__.py  norms.py  recurrence.py
scripts/: addmeta-parallel.sh  addmeta.sh  bpcgui  dwgui  pola_on_off.py  readmeta.py  writemetadata.py
