## Process this file with automake to produce Makefile.in

## Created by Anjuta

AM_CPPFLAGS = \
	-DPACKAGE_LOCALE_DIR=\""$(localedir)"\" \
	-DPACKAGE_SRC_DIR=\""$(srcdir)"\" \
	-DPACKAGE_DATA_DIR=\""$(pkgdatadir)"\"

AM_CFLAGS =\
	 -Wall\
	 -g

lib_LTLIBRARIES = libdw.la


libdw_la_SOURCES = \
	lib.c

libdw_la_LDFLAGS = 

libdw_la_LIBADD = 

include_HEADERS = \
	libdw.h

pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA = libdw-0.1.pc

EXTRA_DIST = \
	libdw-0.1.pc.in
